--- a/templates/mssql_conf_template.j2
+++ b/templates/mssql_conf_template.j2
@@ -75,13 +75,13 @@ SQLCOLLATION="SQL_Latin1_General_CP1_CI_AS"
 SQLSVCINSTANTFILEINIT="True"
 
 ; Windows account(s) to provision as SQL Server system administrators. 
-SQLSYSADMINACCOUNTS="tomse"
+SQLSYSADMINACCOUNTS="administrator"
 
 ; The default is Windows Authentication. Use "SQL" for Mixed Mode Authentication. 
 SECURITYMODE="SQL"
 
 ; The password for the SYSADMIN user (sa)
-SAPWD="A123a123"
+SAPWD="qwerty1234"
 
 ; The number of Database Engine TempDB files. 
 SQLTEMPDBFILECOUNT="4"
