--- a/templates/mssql_conf_template.j2
+++ b/templates/mssql_conf_template.j2
@@ -81,7 +81,7 @@ SQLSYSADMINACCOUNTS="administrator"
 SECURITYMODE="SQL"
 
 ; The password for the SYSADMIN user (sa)
-SAPWD="qwerty1234"
+SAPWD="qwerty#12"
 
 ; The number of Database Engine TempDB files. 
 SQLTEMPDBFILECOUNT="4"
